# signaltrader

./: GITHUB_SETUP_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICK_START.md  RENDER_DEPLOYMENT_GUIDE.md
crypto-trading-backend/: pyproject.toml
crypto-trading-backend/app/: celery_app.py  db.py  main.py  main_backup.py  models.py  schemas.py  security.py
crypto-trading-backend/app/tasks/: periodic_tasks.py  trading_tasks.py
crypto-trading-frontend/: index.html  package-lock.json  package.json
crypto-trading-frontend/src/: App.tsx
crypto-trading-frontend/src/contexts/: AuthContext.tsx
crypto-trading-frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TradeLogsPage.tsx
